syntax = "proto3";
package org.example.proto;
option java_multiple_files = true;

message MeasurementMessage {
  double value = 1;
  uint64 timestamp = 2;
}

message SendTokenRequest {
  repeated MeasurementMessage localStatistics = 1;
  repeated string participantIds = 2;
}

message SendTokenResponse {
  int32 code = 1;
}

service TokenService {
  rpc sendToken(SendTokenRequest) returns (SendTokenResponse);
}